# MinDados

./: README.md  pyproject.toml  trab1.ipynb
Trabalho 1/: pyproject.toml  top50_regras.csv  trab1.html  trab1.ipynb
Trabalho 2/: pyproject.toml  submission.csv  trab2.ipynb
