[project]
name = "mindados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "mlxtend>=0.24.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
